// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card should render card 1`] = `
.c2 {
  font-family: "Open Sans",sans-serif;
  font-size: 16px;
  color: black;
}

.c0 {
  margin: "2em";
  border-radius: 0.5em;
  border: 2px dashed #ffffff;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin: 1em;
  border-radius: 0.25em;
  border: 1px solid #000000;
  background-color: #ffffff;
  height: 20em;
  width: auto;
  max-width: auto;
  text-align: center;
  padding: 1em;
  box-sizing: border-box;
}

.c3 {
  text-align: center;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
      size="normal"
    >
      <div
        className="c3"
      >
        
      </div>
    </div>
  </div>
</div>
`;

exports[`Card should render card with children 1`] = `
.c2 {
  font-family: "Open Sans",sans-serif;
  font-size: 16px;
  color: black;
}

.c0 {
  margin: "2em";
  border-radius: 0.5em;
  border: 2px dashed #ffffff;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin: 1em;
  border-radius: 0.25em;
  border: 1px solid #000000;
  background-color: #ffffff;
  height: 20em;
  width: auto;
  max-width: auto;
  text-align: center;
  padding: 1em;
  box-sizing: border-box;
}

.c3 {
  text-align: center;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
      size="normal"
    >
      <div
        className="c3"
      >
        Children textual content
      </div>
    </div>
  </div>
</div>
`;

exports[`Card should render card with icon 1`] = `
.c3 {
  font-size: 4rem;
  text-align: center;
}

.c2 {
  font-family: "Open Sans",sans-serif;
  font-size: 16px;
  color: black;
}

.c5 {
  font-family: "Exo 2",sans-serif;
  font-size: 16px;
  color: black;
}

.c0 {
  margin: "2em";
  border-radius: 0.5em;
  border: 2px dashed #ffffff;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin: 1em;
  border-radius: 0.25em;
  border: 1px solid #000000;
  background-color: #ffffff;
  height: 20em;
  width: auto;
  max-width: auto;
  text-align: center;
  padding: 1em;
  box-sizing: border-box;
}

.c4 {
  font-weight: 400;
  text-align: center;
  text-transform: uppercase;
}

.c6 {
  text-align: center;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
      size="normal"
    >
      <span
        className="c3 lni lni-users"
      />
      <h3
        className="c4"
      >
        <div
          className="c5"
          size="normal"
        >
          Users
        </div>
      </h3>
      <div
        className="c6"
      >
        
      </div>
    </div>
  </div>
</div>
`;

exports[`Card should render card with icon and children 1`] = `
.c3 {
  font-size: 4rem;
  text-align: center;
}

.c2 {
  font-family: "Open Sans",sans-serif;
  font-size: 16px;
  color: black;
}

.c5 {
  font-family: "Exo 2",sans-serif;
  font-size: 16px;
  color: black;
}

.c0 {
  margin: "2em";
  border-radius: 0.5em;
  border: 2px dashed #ffffff;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin: 1em;
  border-radius: 0.25em;
  border: 1px solid #000000;
  background-color: #ffffff;
  height: 20em;
  width: auto;
  max-width: auto;
  text-align: center;
  padding: 1em;
  box-sizing: border-box;
}

.c4 {
  font-weight: 400;
  text-align: center;
  text-transform: uppercase;
}

.c6 {
  text-align: center;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
      size="normal"
    >
      <span
        className="c3 lni lni-users"
      />
      <h3
        className="c4"
      >
        <div
          className="c5"
          size="normal"
        >
          Users
        </div>
      </h3>
      <div
        className="c6"
      >
        Children textual content
      </div>
    </div>
  </div>
</div>
`;
